--- a/Report/Latex/Report.tex
+++ b/Report/Latex/Report.tex
@@ -1,12 +1,14 @@
 \documentclass[12pt]{article}
-%\documentclass[12pt, letterpaper, twoside]{article}
 \usepackage{graphicx}
 \usepackage{xcolor}
 \usepackage{subcaption}
+
 \usepackage{hyperref}
 \definecolor{linkcolour}{rgb}{0,0,1}
-\hypersetup{colorlinks=true, urlcolor=linkcolour, linkcolor=linkcolour, linkbordercolor=linkcolour, pdfborderstyle={/S/U/W 1}} 
-\urlstyle{same}
+
+\hypersetup{colorlinks=True, 
+		urlcolor=linkcolour,
+		pdfborderstyle={/S/U/W 2}} 
 
 \usepackage{setspace} 
 \singlespacing
@@ -23,12 +25,8 @@
 \date{}
 \maketitle
 
-This report provides the step-by-step explannation of the data analysis performed for a bike-sharing case study. The data belongs to a company that has two kinds of users: annual members and casual riders. The aim of the marketing team target is to convert casual riders into annual members in the next campaign. Thus, the goal of the study was to identify how annual members and casual riders use the bikes differently in order to provide the marketing team with insights. The data on which the analysis was carried out is from January-December 2023 and was downloaded from \href{https://divvy-tripdata.s3.amazonaws.com/index.html}{here}. \\
-
-The library Pandas from Python was used to perform the analysis, and Matplotlib was used to plot the results. The code can be found in the Jupyter Notebook \href{https://github.com/SummerKassem/BikeShareCS/blob/main/PythonCode/bike_share_analysis.html}{here}. \\
-
-The structure of the report will be as follows:
-\begin{enumerate}
+This report provides the step-by-step explanation of the data analysis performed for a bike-sharing case study. The data belongs to a company that has two kinds of users: annual members and casual riders. The aim of the marketing team target is to convert casual riders into annual members in the next campaign. Thus, the goal of the study was to identify how annual members and casual riders use the bikes differently in order to provide the marketing team with insights. The data on which the analysis was carried out is from January-December 2023 and was downloaded from \href{https://divvy-tripdata.s3.amazonaws.com/index.html}{\underline{here}}. The library Pandas from Python was used to perform the analysis, and Matplotlib was used to plot the results. The code can be found in the Jupyter Notebook \href{https://github.com/SummerKassem/BikeShareCS/blob/main/PythonCode/bike_share_analysis.ipynb}{\underline{here}}. The report consists of the following sections:
+\begin{enumerate} 
 	\item Importing
 	\item Exploration
 	\item Cleaning
@@ -39,51 +37,70 @@ The structure of the report will be as follows:
 
 \section{Importing:}
 
-The bike rides for each month are stored in a separate .csv file. So first, each file is read and stored into a DataFrame (DF), and then all 12 DFs are concatenated into a single multi-index DF. Using a multi-index DF allows the distinction between the different months to still be maintained, while also facilitating the aggregation of values across the entire year when needed. In Figure (\ref{fig1}) we can see the first and last 5 entries of bike rides from the concatenated multi-index DF:
+The bike rides for each month are stored in a separate .csv file. So first, each file is read and stored into a DataFrame (DF), and then all 12 DFs are concatenated into a single multi-index DF. Using a multi-index DF allows the distinction between the different months to still be maintained, while also facilitating the aggregation of values across the entire year when needed. In Figure (\underline{\ref{fig1}}) we can see the first and last 5 entries of bike rides from the concatenated multi-index DF:
 
 	\begin{figure}[h]
-	\hspace{-1.1cm}
-	\includegraphics[scale=0.45]{img1.png}
+	\centering
+	\includegraphics[scale=0.4]{original_data.png}
 	\caption{First and last 5 entries of bike rides from the original data}
 	\label{fig1}
 	\end{figure}
 	\pagebreak
 	
-	In Figure (\ref{fig1}) the multi-index of the DF is shown in the first two columns (month, row\_id). Then looking at the entries themselves we can see that the data consists of 13 columns: 1) ride id, 2) type of bike, 3-4) date and time for the start and end of the ride, 5-12) the name, id, latitude and longitude of the start and end stations, and 13) whether the rider was a casual rider or a member.  \\
+	In Figure (\underline{\ref{fig1}}) the multi-index of the DF is shown in the first two columns (month, row\_id). Then looking at the entries themselves we can see that the data consists of 13 columns: 
+	\begin{itemize}
+	\item [1)] ride\_id: a unique identification string for each ride
+	\item [2)] rideable\_type: type of bike that was rented
+	\item [3-4)] started(ended)\_at: date and time for the start and end of the ride
+	\item [5-8)]  start(end)\_station\_name(id): name and id of the start and end stations
+	\item [9-12)] start(end)\_lat(lng): latitude and longitude of the start and end stations
+	\item [13)] member\_casual: whether the rider was an annual member or a casual rider 
+	\end{itemize}
+
+\section{Exploration:}
+Now that the files have been read and stored into a DF, the next step is to explore the dataset.
+ 
+\subsection{Dataset size \& duplicates:}
+First, we look at the size of the dataset by counting the number of bike rides in each month. The result is shown in Figure (\underline{\ref{fig3}}) as a series and its visualisation. In the series, we can see the number of bike rides for each month, the total number of bike rides in the dataset (year 2023), and the average per month. The dataset contains in total almost 5.7 Million entries, with an average of approximately 480,000 rides per month. From Decemeber to March the number of rides is relatively lower than the average, which is expected as these are cold months. This is confirmed by the peak highlighted in August. After retrieving this information for the original dataset, the duplicates were dropped, and the entries were counted again. The number of entries before and after turned out to be identical. Therefore the original dataset did not have any duplicates.\\ 
 	
-	\textit{count\_entries}:\\
-	This method shows the number of bike rides in each month, the total number of bike rides in the dataset (year 2023), and the average per month. The result is shown in Figure (\ref{fig3_1}). The dataset contains in total almost 5.7 Million entries, with an average of approximately 480,000 rides per month. From Decemeber to March the number of rides is relatively lower than the average, which is expected as these are cold months. This is confirmed by the peak highlighted in August. After retrieving this information for the original dataset, the duplicates are dropped, and the method is called again. The result of running the method after dropping the duplicates is shown in Figure (\ref{fig3_2}). The number of entries before and after is identical, therefore the original dataset did not have any duplicates.\\ 
+%	\begin{figure}[h]
+%		\centering
+%		\includegraphics[scale=0.5]{no_of_rides_orig.png}
+%		\caption{Total no of rides per month, for year 2023 and average}
+%		\label{fig3}
+%	\end{figure}
 	
 	\begin{figure}[h]
 	\centering
-	\begin{subfigure}{.4\textwidth}
-	\hspace{0.5 in}
-		\includegraphics[scale=0.5]{img2.png}
-		\caption{}
-		\label{fig3_1}
+	\begin{subfigure}{.3\textwidth}
+	\hspace{-0.4 in}
+		\includegraphics[scale=0.5]{no_of_rides_orig.png}
+		%\caption{}
+		%\label{fig3_1}
 	\end{subfigure}
-	\begin{subfigure}{.4\textwidth}
-	\hspace{0.5 in}
-		\includegraphics[scale=0.5]{img3.png}
-		\caption{}
-		\label{fig3_2}
+	\begin{subfigure}{.6\textwidth}
+	\hspace{-0.8 in}
+		\includegraphics[scale=0.47]{no_of_rides_per_month.pdf}
+		%\caption{}
+		%\label{fig3_2}
 	\end{subfigure}
-	\caption{Total no of entries and average over the year, before and after removing duplicates}
+	\caption{Dataset size and average per month}
 	\label{fig3}
 	\end{figure}
 
-	\textit{get\_null\_percentage}:\\
-	This method calculates the percentage of null values for each column. The results are shown in Figure (\ref{fig4}). As we can see the columns \textit{start\_station\_name}, \textit{start\_station\_id}, \textit{end\_station\_name}, \textit{end\_station\_id} in every month have 13-17\% null values. The columns \textit{end\_lat} and \textit{end\_long} have less than 1\% null values. \\
+\subsection{Null values}
+Next, we look at the percentage of null values for each column. First, the dataset is grouped by month, and then for each month, the percentage of null values in each column is calculated. The result is shown in Figure (\underline{\ref{fig4}}). As we can see the columns \textit{start\_station\_name}, \textit{start\_station\_id}, \textit{end\_station\_name}, \textit{end\_station\_id} in every month have 13-17\% null values. The columns \textit{end\_lat} and \textit{end\_long} have less than 1\% null values. \\
 	
 	\begin{figure}[h]
-	\hspace{-0.5in}
-	\includegraphics[scale=0.48]{imgNAN.png}
-	\caption{Percentage of null values for each column}
+	%\hspace{-0.5in}
+	\centering
+	\includegraphics[scale=0.43]{null_percents.png}
+	\caption{Percentage of null values per month}
 	\label{fig4}
 	\end{figure}
 	
-	\textit{get\_unique}:\\
-	This method gets the number of unique (distinct) values for each column in the month of May. The result is shown in Figure (\ref{fig2}). The choice of the month of May is random and should not make a difference. 
+\subsection{Unique values}
+Here we look at the unique (distinct) values for each column in the month of May. The choice of the month of May is random, as the unique values for several other months were inspected and there does not seem to be a significant difference. The result is shown in Figure (\ref{fig2}). 
 	
 	\begin{figure}[h]
 	\centering
@@ -91,22 +108,32 @@ The bike rides for each month are stored in a separate .csv file. So first, each
 	\caption{No. of unique values for every column for the month of May}
 	\label{fig2}
 	\end{figure}
-	
+Next we investigate each unique value, in the light of the fact that the total number of rides in the month of May is 604,827  (Fig. \underline{\ref{fig3}}):
 	\begin{itemize}
-	\item \textit{ride\_id\_unique}  = 604,827: as expected, \textit{ride\_id} has as many unique values as the number of entries in the dataframe.
-	\item \textit{rideable\_type\_unique} = 3: these 3 values are the types of bikes that are offered by the company, which are: \Big(electric\_bike, classic\_bike, docked\_bike\Big).
-	\item \textit{started(ended)\_at\_unique} = 503,683,  505,259: since these are datetimes (yy-mm-dd hh:mm:ss), one may have expected them to have as many distinct values as the \textit{ride\_id\_unique} = 604,827. Because, at a first glance, it seems unlikely for more than one rider to have rented a bike at the exact same time as another rides down to the second. However, the number of unique values in these columns is less than the number of entries by 16\%. Which means that 16\% of the bikes rides have the same \textit{started\_at} as other rides. To explore this a bit further, one of these duplicates has been retrieved and is shown in Figure (\ref{fig10}). By looking at the rides, it is clear that they are indeed different entries but with the exact same start time. \\
+	\item \textbf{ride\_id\_unique= 604,827}   \\
+	As expected, ride\_id has as many unique values as the number of entries in the DF.
+	\item \textbf{rideable\_type\_unique = 3}  \\
+	These 3 values are the types of bikes that are offered by the company, which are: \\
+	electric\_bike, classic\_bike, docked\_bike.
+	\item \textbf{started\_at\_unique = 503,683} , \textbf{ended\_at\_unique = 505,259} \\
+	Seeing as how these columns are datetimes (yy-mm-dd hh:mm:ss), one may have expected them to have as many distinct values as the number of entries (604,827). However, the number of unique values in these columns is less than the number of entries by 16\%. Which means that 16\% of the bikes rides have the same started\_at as other rides. To explore this a bit further, one of these duplicates has been retrieved and is shown in Figure (\underline{\ref{fig10}}). By looking at the entries, it is clear that they are indeed different rides but with the exact same start time. These unlikely incidents can be a result of having such a large dataset. For example, when looking at the month of January, we find that the percentage of rides with the same started\_at time is just 6\%  \\
 	
 	\begin{figure}[h]
-	\hspace{-0.5in}
-	\includegraphics[scale=0.46]{imgDups1.png}
+	\hspace{0.3in}
+	\includegraphics[scale=0.4]{imgDups1.png}
 	\caption{Entries from May that have the same \textit{started\_at} date and time}
 	\label{fig10}
 	\end{figure}
 	
-	\item \textit{start(end)\_station\_name(id)\_unique} = 1287, 1250, 1254, 1210: since there is a limited number of stations, it is expected that these columns have a smaller number of unique values than the number of entries. However, one would have expected the number of station names and ids to be the same, whereas the ids are less than the names by a small fraction. Which could either by accounted for by the null values (Fig. \ref{fig2}) or could mean that there are stations that have the different names but the same id.
-	\item \textit{start(end)\_lat(long)\_unique} = 188,591, 185,419, 4759, 4762: the start latitude and longitude numbers seem to be as expected, which is less than the total number of entries, but more than the number of stations (this is based on the assumption that the exact location where a bike is parked can vary within the station especially that the values are given to the $6^{th}$ decimal place). However, there is a large difference between the number of values in the start ($\sim$188,000) and the numbers in the end ($\sim$4800). This difference cannot be accounted for by the null values in the end columns, since these were less than 1\%. If these values are true, that would mean that users rode there bikes from many start locations, but mostly ended up in a much smaller set of locations. Which cannot be the case since that would have been reflected in a similar difference between the number of start and end stations. 
-	\item \textit{member\_casual\_unique} = 2: these 2 values are the types of riders, which are: \Big(member, casual\Big).
+	\item \textbf{start\_station\_name(id)\_unique = 1287 and 1250}\\
+	 \textbf{end\_station\_name(id)\_unique = 1254 and 1210} \\
+	Since there is a limited number of stations, it is expected that these columns have a smaller number of unique values than the number of entries. However, one would have expected the number of station names and ids to be the same, whereas the ids are less than the names by a small fraction. Which could either by accounted for by the null values (Fig. \underline{\ref{fig2}}) or could mean that there are stations that have the different names but the same id.
+	
+	\item \textbf{start\_lat(long)\_unique = 188,591 and 185,419} \\
+	\textbf{end\_lat(long)\_unique = 4759 and 4762} \\
+	The start latitude and longitude numbers seem to be as expected, which is less than the total number of entries, but more than the number of stations (this is based on the assumption that the exact location where a bike is parked can vary within the station especially that the values are given to the $6^{th}$ decimal place). However, there is a large difference between the number of values in the start ($\sim$188,000) and the numbers in the end ($\sim$4800). This difference cannot be accounted for by the null values in the end columns, since these were less than 1\%. If these values are true, that would mean that users rode there bikes from many start locations, but mostly ended up in a much smaller set of locations. Which cannot be the case since that would have been reflected in a similar difference between the number of start and end stations. 
+	\item \textbf{member\_casual\_unique} = 2 \\
+	These 2 values are the types of riders, which are: member, casual.
 	\end{itemize}
 
 	
